remove attribution div

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       </div>
     </div>
   </div>
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. 
     Coded by <a href="https://www.linkedin.com/in/allan-da-silva-pessin-2b49701b6/" target="_blank" rel="noopener noreferrer">Allan S. Pessin</a>.
-  </div>
+  </div> -->
 </body>
 
 </html>
